syntax = "proto3";
package scheduler;

// Worker initiates connection and keeps stream open.
// Master pushes commands down this stream.
service WorkerService {
  rpc RegisterStream (stream WorkerMessage) returns (stream MasterCommand);
}

// ============================================================================
// Worker → Master Messages
// ============================================================================

message WorkerMessage {
  oneof payload {
    Register register = 1;
    Heartbeat heartbeat = 2;
    CompileResult compile_result = 3;
    BatchExecutionResult batch_result = 4;
  }
}

message Register {
  string worker_id = 1;      // UUID generated by worker on startup
  uint32 cpu_cores = 2;
  uint64 total_ram_mb = 3;
  repeated string tags = 4;  // e.g., ["can_compile", "high_memory"]
}

message Heartbeat {
  string worker_id = 1;
  float cpu_load_percent = 2;
  uint64 ram_usage_mb = 3;
  uint32 active_tasks = 4;
}

message CompileResult {
  string job_id = 1;
  bool success = 2;
  string compiler_output = 3; // GCC/Rustc stderr for user display
  bytes binary_payload = 4;   // The compiled executable (if success)
  int32 duration_ms = 5;
}

message BatchExecutionResult {
  string job_id = 1;
  string batch_id = 2;
  string worker_id = 3;
  repeated TestCaseResult results = 4;
  ResourceMetrics metrics = 5;
  string system_error = 6;    // If docker failed/crashed
}

message TestCaseResult {
  string test_id = 1;
  string status = 2; // "PASSED", "FAILED", "TLE", "RE", "MLE"
  string stdout = 3;
  string stderr = 4;
  int32 time_ms = 5;
  int32 memory_bytes = 6;
}

message ResourceMetrics {
  uint64 peak_ram_bytes = 1;
  uint64 total_cpu_time_ms = 2;
}

// ============================================================================
// Master → Worker Messages
// ============================================================================

message MasterCommand {
  oneof task {
    CompileTask compile = 1;
    ExecuteBatchTask execute = 2;
    ShutdownRequest shutdown = 3;
  }
}

message CompileTask {
  string job_id = 1;
  string language = 2;
  string source_code = 3;
  repeated string flags = 4; // e.g., ["-O3", "-std=c++20"]
}

message ExecuteBatchTask {
  string job_id = 1;
  string batch_id = 2;
  string language = 3;
  
  // Payload: Source for interpreted, Binary for compiled
  oneof payload {
    string source_code = 4;
    bytes binary_artifact = 5;
  }
  
  repeated TestCase inputs = 6;
  uint32 time_limit_ms = 7;
  uint32 memory_limit_mb = 8;
}

message TestCase {
  string id = 1;
  string input = 2;
  string expected_output = 3;
}

message ShutdownRequest {
  string reason = 1;
}
